objects/Group_Outsourcing_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Account_Formula__c</fullName>
        <formula>Group_Outsourcing_Restriction__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Outsourcing Approvals</relationshipLabel>
        <relationshipName>Group_Outsourcing_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date of Approval/Revision/Recall.</inlineHelpText>
        <label>Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Needs Revision</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Block_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GOR_Approval_Record__c</fullName>
        <formula>HYPERLINK(&quot;https://google.com&quot;, &quot;Name&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GOR Approval Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Offshoring_Creator_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Offshoring Creator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Group_Outsourcing_Record_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Offshoring Record Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Outsourcing_Approvals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Outsourcing_Restriction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Offshoring Restriction</label>
        <referenceTo>Group_Outsourcing_Restriction__c</referenceTo>
        <relationshipLabel>Group Offshoring Approvals</relationshipLabel>
        <relationshipName>Group_Outsourcing_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Outsourcing_Submitter_Email__c</fullName>
        <description>Created this field to store Submitter&apos;s Email address, so that we can use this in sending an email .</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Offshoring Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Group_Outsourcing_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Offshoring Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Outsourcing_Approvals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Submitter_Different_than_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitter Different than Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggedInUserId__c</fullName>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInUserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedInUserProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInUserProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_Management_Approval_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Senior Management Approval Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Senior_Management_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Management Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Outsourcing_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Group Offshoring Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group_Outsourcing_Restriction__c</columns>
        <columns>Senior_Management_Approval__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GOR Approval-{0000}</displayFormat>
        <label>GOR Approval Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Offshoring Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Status_Change_for_appropriate_user</fullName>
        <active>true</active>
        <errorConditionFormula>AND(( $User.Id&lt;&gt; Senior_Management_Approval__r.Id ) , OR(( TEXT(Approval_Status__c)=&apos;Approved&apos;),(TEXT(Approval_Status__c)=&apos;Needs Revision&apos;),ISCHANGED( Comments__c )))</errorConditionFormula>
        <errorMessage>You need to be selected as Sr. Management Approver for this Group Offshoring record in order to update Group Offshoring Approval record</errorMessage>
    </validationRules>
</CustomObject>